# stephp-cap-std

./: Cargo.toml  LICENSE  README.md  stephp-cap-std.stubs.php
php/: ambient_authority.php  common.php  open_ambient_dir.php  permissions_extended.php  test.php
php/dir/: canonicalize.php  clone.php  copy.php  create_dir.php  create_dir_all.php  dir_metadata.php  entries.php  exists.php  hard_link.php  is_dir.php  is_file.php  metadata.php  open_dir.php  open_mode.php  open_options.php  open_with.php  read.php  read_dir.php  read_link.php  read_to_string.php  remove_dir.php  remove_dir_all.php  remove_file.php  rename.php  set_permissions.php  symlink.php  symlink_metadata.php  symlink_safety.php  traversal_blocked.php  write.php
php/file/: clone.php  flush.php  read.php  read_to_end.php  read_to_string.php  rewind.php  seek.php  seek_extended.php  set_len.php  set_permissions.php  set_times.php  stream_len.php  stream_position.php  sync_all.php  sync_data.php  write.php
src/: dir.rs  entries.rs  file.rs  filetype.rs  lib.rs  metadata.rs  openoptions.rs  permissions.rs  systemtime.rs
