[package]
name = "stephp-cap-std"
version = "0.2.0"
edition = "2021"
keywords = ["php", "ext-php-rs", "cap-std", "sandbox", "security"]
categories = ["api-bindings", "filesystem"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.15.6"
cap-std = "4.0.2"

[profile.release]
strip = "debuginfo"
