[package]
name = "stephp-cap-std"
version = "0.5.0"
edition = "2024"
keywords = ["php", "ext-php-rs", "cap-std", "sandbox", "security"]
categories = ["api-bindings", "filesystem"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.15.12"
cap-std = "4.0.2"
fs-set-times = "0.20.3"

[profile.release]
strip = "debuginfo"
